# LLM-CONTEXT-OPT

./: .dockerignore  .env.example  .gitignore  Dockerfile  FINANCE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
contextx/: __init__.py  auth.py  backends.py  budget.py  build.py  cache.py  chunking.py  collect.py  compress.py  config.py  embeddings.py  filter.py  llm.py  loaders.py  memory.py  observability.py  pipeline.py  rank.py  rerank.py  retrieve.py  security.py  service.py  store.py  sync.py  tune.py  types.py  validate.py
contextx/domains/: __init__.py  finance.py  finance_data.py
contextx/eval/: __init__.py  dataset.py  faithfulness.py  hard_plus.py  harness.py  metrics.py  report.py
docs/: README.md  api.md  architecture.md  configuration.md  context-optimization.md  developer-guide.md  evaluation.md
examples/: demo.py  eval_custom.py  eval_hard_plus.py  faithfulness_demo.py  finance_demo.py  run_eval.py
examples/data/: sample_corpus.jsonl  sample_queries.jsonl
scripts/: eval_gate.py
tests/: test_async.py  test_auth.py  test_backends.py  test_custom.py  test_eval.py  test_finance.py  test_ingestion.py  test_pipeline.py  test_quality_ops.py  test_robustness.py  test_streaming.py  test_tools.py
